Fix an alignment issue on the Vampire sheet

--- a/display/shared/styling/parts/groupings.less
+++ b/display/shared/styling/parts/groupings.less
@@ -67,3 +67,7 @@
 .wod5e .nogrow {
   flex-grow: 0;
 }
+
+.wod5e .flexend {
+  align-self: flex-end;
+}
